--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ div.gallery:hover {
 div.gallery img {
     /*Bulunduğu dive tam sığma işlemi*/
     width: 100%;
-    height: auto;
+    height: 70vh;
 }
 
 div.desc {
