--- a/style.css
+++ b/style.css
@@ -1,5 +1,61 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
+
+.container {
+    height: 70px;
+    width: 100%;
+    background-color: rgba(128, 58, 1, 0.897);
+
+}
+
+.logo {
+    width: auto;
+    position: absolute;
+    top: 30px;
+    left: 20px;
+    color: white;
+}
+
+.nav-link {
+    float: right;
+    margin: 15px;
+    padding: 10px;  
+}
+
+.nav-link a {
+    margin-left: 50px;
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.nav-link a:hover {
+    color:rgb(0, 0, 0);
+}
+
+.nav-link a:active {
+    color: gray;
+}
+
+.nav-link button {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+    border-radius: 15px;
+    border: none;
+    margin-left: 50px;
+    background-color: rgb(19, 2, 2);
+    color: white;
+}
+
+.nav-link button:hover {
+    background-color: transparent;
+    border: 1px solid black;
+    box-shadow: 0px 4px 5px 0px black;
 }
 
 .responsive {
@@ -48,9 +104,9 @@ div.desc {
         width: 100%;
     }
 }
-@media  screen and (max-width: 600px) {
+
+@media screen and (max-width: 600px) {
     body {
-      font-size: 15px;
+        font-size: 15px;
     }
-  }
-  
+}
